--- a/apps/doc/src/app/components/buttons/button/button.component.html
+++ b/apps/doc/src/app/components/buttons/button/button.component.html
@@ -34,7 +34,7 @@
       <prizm-button-with-counter-example></prizm-button-with-counter-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="counter" [content]="exampleCounter" heading="Button with counter">
+    <prizm-doc-example id="overflow" [content]="exampleOverflow" heading="Button with overflowed text">
       <prizm-button-text-overflow-example></prizm-button-text-overflow-example>
     </prizm-doc-example>
   </ng-template>
