--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -1,7 +1,7 @@
 @let i18n = i18n$ | async;
 
 <div class="query-builder__tree" aria-role="tree">
-  @for(node of dataSource.data; track node) {
+  @for(node of data; track node) {
   <ng-container *ngTemplateOutlet="nodeTemplate; context: { $implicit: node, level: 0 }"></ng-container>
   }
 </div>
@@ -15,13 +15,13 @@
           ? 'var(--prizm-status-success-primary-default)'
           : 'var(--prizm-status-info-primary-default)',
     }"
-    [attr.aria-expanded]="true"
     [attr.aria-level]="level + 1"
     [cdkDragData]="node"
     [cdkDragDisabled]="level === 0 || disabled"
     (cdkDragDropped)="_onDropped($event)"
-    aria-role="treeitem"
     cdkDrag
+    aria-role="treeitem"
+    aria-expanded="true"
   >
     @if (level !== 0) {
     <button
