--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -59,9 +59,10 @@
       <prizm-switcher-only-icon-example></prizm-switcher-only-icon-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="overflow" [content]="exampleOverflow" heading="Switcher overflow">
+    <!-- TODO: for #2178  -->
+    <!-- <prizm-doc-example id="overflow" [content]="exampleOverflow" heading="Switcher overflow">
       <prizm-switcher-overflow-example></prizm-switcher-overflow-example>
-    </prizm-doc-example>
+    </prizm-doc-example> -->
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
