--- a/apps/doc/src/app/components/switcher/examples/switcher-overflow-example/switcher-overflow-example.component.less
+++ b/apps/doc/src/app/components/switcher/examples/switcher-overflow-example/switcher-overflow-example.component.less
@@ -1,3 +1,11 @@
 .switcher-max-width {
   max-width: 400px;
 }
+
+.show-more-btn {
+  ::ng-deep prizm-wrapper {
+    border: 1px solid var(--prizm-background-stroke);
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
