fix(doc/confitm-dialog): remove extra input layout from demo template #755

--- a/apps/doc/src/app/components/dialogs/confirm-dialog/confirm.component.html
+++ b/apps/doc/src/app/components/dialogs/confirm-dialog/confirm.component.html
@@ -186,10 +186,4 @@
   </ng-template>
 </prizm-doc-page>
 
-<ng-template #contentTemp>
-  Контент из <a class="template-link" href="#">шаблона</a>
-
-  <prizm-input-layout label="Validators">
-    <prizm-input-select [items]="items"></prizm-input-select>
-  </prizm-input-layout>
-</ng-template>
+<ng-template #contentTemp> Контент из <a class="template-link" href="#">шаблона</a> </ng-template>
