--- a/libs/components/src/lib/components/dialogs/dialog/dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/dialog/dialog.component.less
@@ -37,6 +37,7 @@
     max-width: 90%;
     align-items: center;
     display: -webkit-box;
+    line-clamp: 3;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
   }
