--- a/libs/components/src/lib/components/widget/widget.component.less
+++ b/libs/components/src/lib/components/widget/widget.component.less
@@ -16,6 +16,7 @@ prizm-card {
 
   text-overflow: ellipsis;
   display: -webkit-box;
+  line-clamp: 1;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
