feat(components/confirm-dialog): dialog title should be one line only, confrirm - 3 lines #755

--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
@@ -8,6 +8,10 @@
   text-align: var(--prizm-confirm-dialog-title-align, center);
   color: var(--prizm-confirm-dialog-title, var(--prizm-text-icon-primary));
   white-space: pre-line;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .description {
