--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/tree-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/tree-multi-select.component.less
@@ -108,7 +108,7 @@ prizm-checkbox {
 prizm-chips {
   &.inner,
   &[data-size='s'] {
-    --prizm-chips-item-heigh: 16px;
+    --prizm-chips-item-height: 16px;
   }
 }
 
@@ -144,4 +144,8 @@ prizm-dropdown-host {
 prizm-icon.disabled {
   cursor: not-allowed;
   pointer-events: none;
+}
+
+:host .input-search {
+  cursor: inherit;
 }
